--- a/backend/package.json
+++ b/backend/package.json
@@ -11,7 +11,12 @@
   },
   "dependencies": {
     "@prisma/client": "^7.1.0",
-    "express": "^5.2.1"
+    "bcrypt": "^6.0.0",
+    "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
+    "express": "^5.2.1",
+    "morgan": "^1.10.1",
+    "zod": "^4.2.1"
   },
   "devDependencies": {
     "@types/express": "^5.0.6",
