--- a/backend/package.json
+++ b/backend/package.json
@@ -7,9 +7,14 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start:dev": "tsx watch src/index.ts",
+    "build": "tsc",
+    "prisma:generate": "prisma generate",
+    "prisma:migrate": "prisma migrate dev",
+    "start": "node dist/index.js"
   },
   "dependencies": {
+    "@prisma/adapter-pg": "^7.1.0",
     "@prisma/client": "^7.1.0",
     "@supabase/supabase-js": "^2.88.0",
     "bcrypt": "^6.0.0",
@@ -20,6 +25,7 @@
     "jsonwebtoken": "^9.0.3",
     "morgan": "^1.10.1",
     "multer": "^2.0.2",
+    "pg": "^8.16.3",
     "zod": "^4.2.1"
   },
   "devDependencies": {
@@ -31,6 +37,7 @@
     "@types/morgan": "^1.9.10",
     "@types/multer": "^2.0.0",
     "@types/node": "^25.0.3",
+    "@types/pg": "^8.16.0",
     "prisma": "^7.1.0",
     "tsx": "^4.21.0",
     "typescript": "^5.9.3"
