--- a/backend/package.json
+++ b/backend/package.json
@@ -36,6 +36,7 @@
     "nodemailer": "^7.0.11",
     "pdf-lib": "^1.17.1",
     "pdf-parse": "^2.4.5",
+    "pdfkit": "^0.17.2",
     "pg": "^8.16.3",
     "zod": "^4.2.1"
   },
@@ -49,6 +50,7 @@
     "@types/multer": "^2.0.0",
     "@types/node": "^25.0.3",
     "@types/nodemailer": "^7.0.4",
+    "@types/pdfkit": "^0.17.4",
     "@types/pg": "^8.16.0",
     "prisma": "^7.1.0",
     "tsx": "^4.21.0",
