--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,7 @@
   "main": "index.js",
   "scripts": {
     "start:dev": "tsx watch src/index.ts",
-    "build": "tsc",
+    "build": "tsc && tsc-alias",
     "seed": "tsx src/scripts/admin.seed.ts",
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate dev",
@@ -55,6 +55,7 @@
     "@types/pg": "^8.16.0",
     "@types/slug": "^5.0.9",
     "prisma": "^7.1.0",
+    "tsc-alias": "^1.8.10",
     "tsx": "^4.21.0",
     "typescript": "^5.9.3"
   }
