--- a/backend/package.json
+++ b/backend/package.json
@@ -33,11 +33,11 @@
     "mammoth": "^1.11.0",
     "morgan": "^1.10.1",
     "multer": "^2.0.2",
-    "nodemailer": "^7.0.11",
     "pdf-lib": "^1.17.1",
     "pdf-parse": "^2.4.5",
     "pdfkit": "^0.17.2",
     "pg": "^8.16.3",
+    "resend": "^6.6.0",
     "slug": "^11.0.1",
     "zod": "^4.2.1"
   },
@@ -50,7 +50,6 @@
     "@types/morgan": "^1.9.10",
     "@types/multer": "^2.0.0",
     "@types/node": "^25.0.3",
-    "@types/nodemailer": "^7.0.4",
     "@types/pdfkit": "^0.17.4",
     "@types/pg": "^8.16.0",
     "@types/slug": "^5.0.9",
