--- a/backend/package.json
+++ b/backend/package.json
@@ -25,6 +25,7 @@
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "date-fns": "^4.1.0",
+    "diff": "^8.0.2",
     "docx": "^9.5.1",
     "docx-pdf": "^0.0.1",
     "dotenv": "^17.2.3",
@@ -35,6 +36,7 @@
     "multer": "^2.0.2",
     "pdf-lib": "^1.17.1",
     "pdf-parse": "^2.4.5",
+    "pdfjs-dist": "^5.4.530",
     "pdfkit": "^0.17.2",
     "pg": "^8.16.3",
     "resend": "^6.6.0",
