--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "next": "16.0.8",
     "react": "19.2.1",
     "react-dom": "19.2.1",
+    "react-google-recaptcha": "^3.1.0",
     "react-redux": "^9.2.0",
     "react-toastify": "^11.0.5"
   },
